<resources>
    <string name="app_name">Settelspot</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Settelspot</string>
    <string name="nav_header_subtitle">bansaganesha@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_Login">Login</string>
    <string name="action_Logout">Logout</string>
    <string name="action_aboutus">About Us</string>
    <string name="action_business">Business Profile</string>

    <string name="menu_home">Home</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_hostel">Hostel</string>
    <string name="menu_mess">Mess</string>
    <string name="menu_room">Room/flat</string>
    <string name="menu_class">Tution</string>
    <string name="communicate">Communicate</string>
    <string name="login">Login</string>

    <string name="map_key" translatable="false">AIzaSyB_qsP8AOP_P0MdlPz-48TDaJYjTP3vbjo</string>

</resources>
