<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.drawer1.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />
    <action
        android:id="@+id/action_nav_login_to_nav_home"
        app:destination="@+id/nav_home"
        app:launchSingleTop="false"
        app:popUpTo="@+id/nav_home"
        app:popUpToInclusive="false" />
    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.drawer1.ui.profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_room"
        android:name="com.example.drawer1.ui.room.RoomFragment"
        android:label="Our Sellers"
        tools:layout="@layout/fragment_room" />
    <fragment
        android:id="@+id/nav_class"
        android:name="com.example.drawer1.ui.classes.ClassesFragment"
        android:label=""
        tools:layout="@layout/fragment_class" />

    <fragment
        android:id="@+id/nav_setting"
        android:name="com.example.drawer1.ui.setting.SettingFragment"
        android:label="@string/action_settings"
        tools:layout="@layout/fragment_setting" />

    <fragment
        android:id="@+id/nav_business"
        android:name="com.example.drawer1.ui.business.BusinessFragment"
        android:label="@string/action_business"
        tools:layout="@layout/fragment_business" />

    <fragment
        android:id="@+id/nav_about"
        android:name="com.example.drawer1.ui.about.AboutFragment"
        android:label="@string/action_aboutus"
        tools:layout="@layout/fragment_about" />

    <fragment
        android:id="@+id/nav_login"
        android:name="com.example.drawer1.ui.login.LoginFragment"
        android:label="@string/action_Login"
        tools:layout="@layout/fragment_login">

    </fragment>
</navigation>